<resources>
    <string name="app_name">TuneFlow</string>
    <string name="covert_art">Visuel Musique</string>
    <string name="right">Droite</string>
    <string name="middle">Milieu</string>
    <string name="left">Gauche</string>
    <string name="listen_on_apple_music">Ecouter sur Apple Music</string>
    <string name="arrow_for_swipe_indication">Fleche d\'indication pour swipe</string>
    <string name="tap_to_listen">Cliquer pour écouter</string>
    <string name="vinyl_image">image vinyle</string>
    <string name="happy">Joyeux</string>
    <string name="chill">Chill</string>
    <string name="sport">Motivation</string>
    <string name="romantic">Romantique</string>
    <string name="sad">Nostalgie</string>
    <string name="work">Concentration</string>
    <string name="discover">Découvrir</string>
    <string name="explore_music">Explorez la musique selon votre humeur</string>
    <string name="search">rechercher</string>
    <string name="leave_mood_sport">Quitter le mood Sport</string>
    <string name="left_arrow">flèche gauche</string>
    <string name="mute_icon">icon muet</string>
    <string name="add_to_playlist">Ajouter à une playlist</string>
    <string name="play_pause">Play Pause</string>
    <string name="like">Like</string>
    <string name="no_result">Aucun résultat trouvé</string>
    <string name="search_song_artiste">Rechercher une musique, un artiste...</string>
    <string name="arrow_bottom">Flèche bas</string>
    <string name="loader">chargement</string>
    <string name="loading">Chargement...</string>
    <string name="error">Erreur</string>
    <string name="error_occured">Oups ! Une erreur est survenue.</string>
    <string name="retry">Réessayer</string>
    <string name="my_stats">Mes statistiques</string>
    <string name="musical_activity">Mon activité musicale</string>
    <string name="song_listened">Titres écoutés</string>
    <string name="icon_music">logo musique</string>
    <string name="liked_tracks">Morceaux likés</string>
    <string name="most_listened_artist">Artiste préféré</string>
    <string name="discovered_artists">Artistes découverts</string>
    <string name="last_liked_songs">Les derniers morceaux likés</string>
    <string name="home">Accueil</string>
    <string name="playlists">Playlists</string>
    <string name="profil">Profil</string>
    <string name="my_playlists">Mes playlists</string>
    <string name="new_playlist">Nouvelle playlist</string>
    <string name="give_name_playlist">Donnez un nom à votre nouvelle playlist</string>
    <string name="ex_name_playlist">Ex: Mes favoris, Workout, Chill...</string>
    <string name="cancel">Annuler</string>
    <string name="create">Créer</string>
    <string name="close">fermer</string>
    <string name="create_new_playlist">Créer une nouvelle playlist</string>
    <string name="add">ajouter</string>
    <string name="Share_underline"><u>Partager</u></string>
    <string name="title_of_playlist">Titre de la playlist</string>
    <string name="delete">supprimer</string>
    <string name="Delete">Supprimer</string>
    <string name="Share">Partager</string>
    <dimen name="little_space_between_bloc">5dp</dimen>
    <dimen name="space_between_bloc">13dp</dimen>
    <dimen name="double_space_between_bloc">26dp</dimen>
    <dimen name="triple_space_between_bloc">39dp</dimen>
    <dimen name="padding_screen">40dp</dimen>
    <dimen name="little_padding_screen">20dp</dimen>
    <dimen name="border_cover">16dp</dimen>
</resources>