<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_rounded"
    android:padding="24dp">

    <!-- Close button -->
    <ImageView
        android:id="@+id/btnClosePopup"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        android:foreground="@drawable/ripple_circle"
        android:src="@drawable/ic_close" />

    <!-- Content container -->
    <LinearLayout
        android:id="@+id/popupContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Icon -->
        <RelativeLayout
            android:id="@+id/buttonCreatePlaylist"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginBottom="@dimen/space_between_bloc"
            android:background="@drawable/bg_circle_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_new_playlist" />
        </RelativeLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/textTitlePopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/new_playlist"
            android:textColor="@color/home_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/textSubtitlePopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/give_name_playlist"
            android:textColor="@color/subtitle"
            android:textSize="14sp" />

        <!-- EditText -->
        <EditText
            android:id="@+id/editPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="@dimen/space_between_bloc"
            android:background="@drawable/bg_edittext_rounded"
            android:hint="@string/ex_name_playlist"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:textColor="@color/subtitle"
            android:textColorHint="@color/subtitle"
            android:textSize="14sp" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_outline"
                android:foreground="@drawable/ripple_button"
                android:text="@string/cancel"
                android:textColor="@color/home_title" />

            <LinearLayout
                android:id="@+id/btnCreate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_color"
                android:foreground="@drawable/ripple_button"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/space_between_bloc"
                    android:src="@drawable/ic_check" />

                <androidx.appcompat.widget.AppCompatButton

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="@string/create"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
