<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutOneResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/space_between_bloc">

    <!-- Cover -->
    <ImageView
        android:id="@+id/imageCoverSearch"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/covert_art"
        android:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher" />

    <!-- title artist album -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/titleSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/home_title"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Titre" />

        <TextView
            android:id="@+id/authorSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/description"
            android:textSize="14sp"
            tools:text="Artiste" />

        <TextView
            android:id="@+id/albumSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/description"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="Album" />
    </LinearLayout>

    <!-- Button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonLikeSearch"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_heart" />

        <ImageButton
            android:id="@+id/buttonPlay"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_circle_color"
            android:contentDescription="@string/play_pause"
            android:foreground="@drawable/ripple_circle"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/buttonMore"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_to_playlist"
            android:src="@drawable/ic_more" />
    </LinearLayout>
</LinearLayout>
